tests/old/pass/integers/u128/max_fail.leo
function main() {
    const a: u128 = 340282366920938463463374607431768211456;
}