tests/old/fail/syntax/address_fail.leo
function main() {
    const address = 0u32;
}